divide pages show/create

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -11655,6 +11655,23 @@ html body .app.flex-row.align-items-center {
   flex: 1;
   position: relative; }
 
+.dropdown-menu-quizzes {
+  /* top: 100%; */
+  /* left: 0; */
+  z-index: 1000;
+  /* display: none; */
+  min-width: 10rem;
+  padding: 0 0;
+  margin: 0.125rem 0 0;
+  font-size: 0.875rem;
+  color: #23282c;
+  text-align: left;
+  list-style: none;
+  background-color: white;
+  background-clip: padding-box;
+  border: 1px solid #c8ced3;
+  border-radius: 0.25rem; }
+
 .home-tile_wrap {
   max-width: 1140px;
   max-height: auto;
