Refactoring and bug fixes

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -50,7 +50,7 @@
   font-weight: $fontWeightBold;
 
   &:hover {
-    color: #86bc25;
+    color: #000000;
   }
 }
 
@@ -223,7 +223,7 @@
       right: 24px;
       transition: 0.2s ease-in;
       transition-delay: 0.1s;
-      background: #86bc25;
+      background: #000000;
       height: 38px;
       width: 38px;
       border-radius: 50%;
@@ -242,7 +242,7 @@
       right: 24px;
       transition: 0.2s ease-in;
       transition-delay: 0.1s;
-      background: #86bc25;
+      background: #000000;
       height: 38px;
       width: 38px;
       border-radius: 50%;
