--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -74,7 +74,7 @@
     margin: 40px auto 20px auto;
 
     &_link {
-      color: #86bc25;
+      color: #000000;
       font-weight: $fontWeightBold;
       font-family: $fontFamily;
       cursor: pointer;
