--- a/src/components/home/_home.scss
+++ b/src/components/home/_home.scss
@@ -170,7 +170,7 @@
   &_Content {
     font-size: $fontSizeH1;
     line-height: 68px;
-    color: #86bc25;
+    color: #000000;
     font-weight: $fontWeightBold;
     font-family: $fontFamily;
     margin-top: 10px;
