--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -23,7 +23,7 @@
     height: 100px;
     border-radius: $borderRadiusCircle;
     border-style: solid;
-    border-color: #86bc25;
+    border-color: #000000;
     border-width: 8px;
   }
 
@@ -84,7 +84,7 @@
       transition: 0.2s ease-in;
 
       &:hover {
-        color: #86bc25;
+        color: #000000;
         border-bottom: none;
         text-decoration: none;
       }
@@ -92,7 +92,7 @@
   }
 }
 .active {
-  color: #86bc25;
+  color: #000000;
   cursor: pointer;
   margin: 0 0 20px 0;
   font-size: $fontSizeBody;
