--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -11773,7 +11773,7 @@ html body .app.flex-row.align-items-center {
   .card-product_Stats_Content {
     font-size: 56px;
     line-height: 68px;
-    color: #86bc25;
+    color: #000000;
     font-weight: 700;
     font-family: "Open Sans";
     margin-top: 10px;
@@ -11901,7 +11901,7 @@ html body .app.flex-row.align-items-center {
   transition-delay: 0s;
   font-weight: 700; }
   .headerPageButtons:hover {
-    color: #86bc25; }
+    color: #000000; }
 
 .headerPageProfile {
   right: 0;
@@ -12043,7 +12043,7 @@ html body .app.flex-row.align-items-center {
     right: 24px;
     transition: 0.2s ease-in;
     transition-delay: 0.1s;
-    background: #86bc25;
+    background: #000000;
     height: 38px;
     width: 38px;
     border-radius: 50%;
@@ -12060,7 +12060,7 @@ html body .app.flex-row.align-items-center {
     right: 24px;
     transition: 0.2s ease-in;
     transition-delay: 0.1s;
-    background: #86bc25;
+    background: #000000;
     height: 38px;
     width: 38px;
     border-radius: 50%;
@@ -12147,7 +12147,7 @@ html body .app.flex-row.align-items-center {
     text-align: center;
     margin: 40px auto 20px auto; }
     .form_container_text_link {
-      color: #86bc25;
+      color: #000000;
       font-weight: 700;
       font-family: "Open Sans";
       cursor: pointer; }
@@ -12255,7 +12255,7 @@ html body .app.flex-row.align-items-center {
     height: 100px;
     border-radius: 50%;
     border-style: solid;
-    border-color: #86bc25;
+    border-color: #000000;
     border-width: 8px; }
   .navigation_Tab_content {
     text-align: center;
@@ -12298,12 +12298,12 @@ html body .app.flex-row.align-items-center {
     text-decoration: none;
     transition: 0.2s ease-in; }
     .navigation_Tab_MenuContent_text:hover {
-      color: #86bc25;
+      color: #000000;
       border-bottom: none;
       text-decoration: none; }
 
 .active {
-  color: #86bc25;
+  color: #000000;
   cursor: pointer;
   margin: 0 0 20px 0;
   font-size: 18px;
