--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import 'ie-fix';
 
 // Styles from Component
+// Enable Component Styles here
 @import '../components/home/home';
 @import '../components/Header/header';
 @import '../components/Login/login';
