--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -11906,6 +11906,9 @@ html body .app.flex-row.align-items-center {
       margin-left: 0; } }
 
 @media only screen and (max-width: 385px) {
+  .diplay_image_size {
+    max-width: 380px;
+    max-height: 380px; }
   .card-product_StatsHome_Content {
     font-size: 38px !important; } }
 
