--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -108,3 +108,10 @@
     display: none;
   }
 }
+
+@media (min-width: 576px){
+  .modal-dialog {
+      max-width: 1500px;
+      margin: 1.75rem auto;
+  }
+}
