modals and styling

--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -110,8 +110,8 @@
 }
 
 @media (min-width: 576px){
-  .modal-dialog {
-      max-width: 1500px;
+  .modal-dialog2 {
+      max-width: 1000px;
       margin: 1.75rem auto;
   }
 }
