--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,3 +19,4 @@
 @import '../components/Login/login';
 @import '../components/Nav/nav';
 @import '../components/Footer/footer';
+@import '../components/Scoring/scoring';
