--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,7 +14,6 @@
 
 // Styles from Component
 // Enable Component Styles here
-@import '../components/home/home';
+@import '../components/Home/home';
 @import '../components/Header/header';
-@import '../components/Login/login';
 @import '../components/Scoring/scoring';
